- 优化 favicon.png

--- a/app-web/detail.html
+++ b/app-web/detail.html
@@ -7,9 +7,9 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=.5,maximum-scale=.5,minimum-scale=.5,viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
-    <link rel="icon" type="image/x-icon" href="https://test.mc.cn/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <link rel="stylesheet" type="text/css" href="./js/css.css">
-    <title>米橙</title>
+    <title>Apps Service</title>
 </head>
 <body>
 <div class="content" id="content">
