--- a/app-web/index.html
+++ b/app-web/index.html
@@ -4,9 +4,11 @@
 	
 	<meta name="viewport" content="width=device-width,initial-scale=.5,maximum-scale=.5,minimum-scale=.5,viewport-fit=cover">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="icon" type="image/x-icon" href="https://test.mc.cn/favicon.png">
+	<link rel="icon" type="image/x-icon" href="./img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="js/css.css">
-	<title>米橙</title>
+	<title>App Service</title>
+	<meta name="description" content="App Service 是一个开源团队APP管理程序，可开发运营测试集中性管理，github地址：https://github.com/cherishsince/apps" />
+	<meta name="keywords" content="App Service，app服务，管理程序，app管理，开源App" />
 </head>
 <body>
 	<div class="content" id="content">
