优化：plist 文件，跳转

--- a/app-web/apps.html
+++ b/app-web/apps.html
@@ -95,7 +95,7 @@
                     '<div onClick=openPage("' + node.projectId + '")>' +
                     '<img class="icon" src="' + node.logo + '" />' +
                     '<div class="dic">' +
-                    '<p class="name">' + node.group + '（' + edition[node.edition || 4] + '）</p>';
+                    '<p class="name">' + node.group + '</p>';
                 if (node.note) {
                     html += '<p class="load" >' + node.note + '</p>';
                 } else {
