--- a/app-web/detail.html
+++ b/app-web/detail.html
@@ -72,7 +72,7 @@
             item = {
                 logo: item.logo,
                 name: item.name,
-                projectName: item.tags,
+                projectName: item.name + '(' + item.tags + ')',
                 versionName: item.publish.version,
                 packageSize: item.publish.packageSize,
                 updateTime: item.publish.createdTime,
