--- a/app-web/apps.html
+++ b/app-web/apps.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <link rel="stylesheet" type="text/css" href="./js/css.css">
     <title>Apps Service</title>
+    <meta name="description" content="App Service 是一个开源团队APP管理程序，可开发运营测试集中性管理，github地址：https://github.com/cherishsince/apps" />
+    <meta name="keywords" content="App Service，app服务，管理程序，app管理，开源App" />
 </head>
 <body>
 <div class="content" id="content">
