--- a/app-web/index.html
+++ b/app-web/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="content" id="content">
-		<div class="top" style="width: 750px; left: 50%; margin-left: -375px;">Apps</div>
+		<div class="top" style="width: 750px; left: 50%; margin-left: -375px;">App Service</div>
 		<div class="list" id="list">
 		</div>
 	</div>
